# sPARcRNA_Viz

./: .cookiecutterrc  .gitignore  CHANGELOG.md  CITATION.cff  CROSSWALK.md  Makefile  PIPELINE.md  README.md  codemeta.json  docker-compose-local.yml  docker-compose-rstudio.yaml
.github/workflows/: check-image.yml
.osparc/: docker-compose.overwrite.yml  metadata.yml
astro/.astro/: settings.json
astro/src/pages/: index.astro  tsne.astro
astro/src/scripts/: tsne-render copy.ts  tsne-render.ts  tsne.js
docker/: Dockerfile
frontend/: .eslintrc.cjs  components.d.ts  package.json  server.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  unimport.d.ts
frontend/src/assets/: base.css  main.css  tsne.astro
frontend/src/lib/: otsne.js  tsne.js
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  HomeView.vue  TsneView.vue  TsneViewOld.vue
server/: prototyping.ipynb  pyproject.toml
service.cli/: execute.sh  json_convert.py
services/dex/.osparc/: metadata.yml
services/dex/src/: dex.R
services/gsea/: .cookiecutterrc
services/gsea/.osparc/: docker-compose.overwrite.yml  metadata.yml  runtime.yml
services/gsea/docker/: Dockerfile
services/gsea/service.cli/: execute.sh
services/osparc_gsea_service/: README.md  docker-compose-local.yml
src/astro/: package.json
src/frontend/: .eslintrc.cjs  auto-imports.d.ts  package.json
src/pipeline/: dex.R  json_convert.py
src/static/: index.html  styles.css  tsne.js  tsne_data.js
ssg/: components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
static/: index.html  tsne.js
(+44 files in other folders)
