[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mihir Samdarshi", email = "mihirsamdarshi@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

# Configuration for the Ruff linter.
[tool.ruff]
target-version = "py312"
line-length = 96
# Configure the linter
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "D203",
    "D212",
]
